# links

./: .gitignore  README.md  board-survey.md  drizzle.config.ts  genasite-survey.md  index.html  links.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
db/: client.ts  schema.ts  seed.links.sql  semantic-layout.json
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: agent-chat-ui-playground.html  agent-history-current.excalidraw  cloudflare-sandbox-runtime-architecture.excalidraw  exe-dev-sandbox-architecture.excalidraw
extension/: README.md  background.js  manifest.json  shared.js  sidepanel.html  sidepanel.js  styles.css
implementation-notes/: 2026-06-22-links-board-parity.html  2026-06-22-links-mvp.html  2026-06-23-bake-suggestions-and-sync-prod.html  2026-06-23-chunked-chat-retrieval.html  2026-06-23-cloudflare-deploy-links.html  2026-06-23-link-autotagger-service.html  2026-06-23-local-links-seed-and-autotag.html  2026-06-23-real-auto-tags.html  2026-06-23-title-only-link-cards.html  2026-06-23-youtube-transcript-backfill.html  2026-06-23-youtube-transcript-ingest.html  2026-06-24-link-scrape-backfill.html  2026-06-24-newspaper-links-page.html  2026-06-24-random-reader-view.html  2026-06-24-readable-async-link-scraping.html  INDEX.html  (+4 more)
mobile/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: lib.rs  main.rs
server/: auth.ts  (+2 more)
(+174 files in other folders)
